@@ -14,6 +14,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <selenium-java.version>4.25.0</selenium-java.version>
         <testng.version>7.7.0</testng.version>
+        <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
     </properties>
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
@@ -67,9 +68,12 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M5</version> <!-- Use the version you need -->
                 <configuration>
-                    <suiteXmlFiles>
-                        <suiteXmlFile>testng.xml</suiteXmlFile> <!-- Path to your testng.xml -->
-                    </suiteXmlFiles>
+<!--                    <suiteXmlFiles>-->
+<!--                        <suiteXmlFile>testng.xml</suiteXmlFile> &lt;!&ndash; Path to your testng.xml &ndash;&gt;-->
+<!--                    </suiteXmlFiles>-->
+                    <includes>
+                        <include>**/*Test.class</include>
+                    </includes>
                 </configuration>
             </plugin>
         </plugins>
